Version 2.0.0-dev
- BC break: ChatControl uses translator registered to Latte

Version 1.2.0
- deprecated translator and lang in ChatControl

Version 1.1.1
- added label for message in new chat message form

Version 1.1.0
- raised minimal version of PHP to 7.2
- dropped support for Nette 2.4

Version 1.0.0
- first version